Added Navbar (TODO : COMPONENT)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,75 @@
-<p>New website in Roboto font</p>
+<!--<p>New website in Roboto font</p>-->
 
-<p>{{ 'HOMEPAGE.hello' | translate }}</p>
+<!--<p>{{ 'HOMEPAGE.hello' | translate }}</p>-->
+
+<!--<div class="container-fluid">-->
+<!--<div class="row no-gutters">-->
+<!--<div class="col-md-12">-->
+<!--<ngb-carousel>-->
+<!--<ng-template ngbSlide>-->
+<!--<img [src]="'https://picsum.photos/900/500?image=309'" alt="Random first slide">-->
+<!--<div class="carousel-caption">-->
+<!--<h3>10 seconds between slides...</h3>-->
+<!--<p>This carousel uses customized default values.</p>-->
+<!--</div>-->
+<!--</ng-template>-->
+<!--<ng-template ngbSlide>-->
+<!--<img [src]="'https://picsum.photos/900/500?image=307'" alt="Random second slide">-->
+<!--<div class="carousel-caption">-->
+<!--<h3>No mouse events...</h3>-->
+<!--<p>This carousel doesn't pause or resume on mouse events</p>-->
+<!--</div>-->
+<!--</ng-template>-->
+<!--<ng-template ngbSlide>-->
+<!--<img [src]="'https://picsum.photos/900/500?image=301'"  alt="Random third slide">-->
+<!--<div class="carousel-caption">-->
+<!--<h3>No keyboard...</h3>-->
+<!--<p>This carousel uses customized default values.</p>-->
+<!--</div>-->
+<!--</ng-template>-->
+<!--<ng-template ngbSlide>-->
+<!--<img [src]="'https://picsum.photos/900/500?image=308'" alt="Random fourth slide">-->
+<!--<div class="carousel-caption">-->
+<!--<h3>And no wrap after last slide.</h3>-->
+<!--<p>This carousel uses customized default values.</p>-->
+<!--</div>-->
+<!--</ng-template>-->
+<!--</ngb-carousel>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2e7d32;">
+    <a class="navbar-brand" href="#">
+        <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top rounded">
+        Brocapêche
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Petites annonces</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Conseils</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Vos photos</a>
+            </li>
+            <li class="nav-item">
+                <i class="fa fa-search"></i>
+            </li>
+        </ul>
+        <button type="button" class="btn btn-primary mr-3 custom-signup-btn">S'inscrire</button>
+        <button type="button" class="btn btn-primary custom-signin-btn">Se connecter</button>
+    </div>
+</nav>
 
 <router-outlet></router-outlet>
