--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,4 +72,12 @@
     </div>
 </nav>
 
+<div class="container-fluid">
+    <div class="row homepage-main-image-container">
+        <div class="col-xs-12">
+
+        </div>
+    </div>
+</div>
+
 <router-outlet></router-outlet>
