--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,12 @@ ngb-carousel {
   }
 }
 
+nav {
+  -webkit-box-shadow: 0px 3px 36px 14px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 3px 36px 14px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 36px 14px rgba(0,0,0,0.75);
+}
+
 .custom-signup-btn, .custom-signin-btn {
   background-color: #005005;
   border-color: #60ad5e;
@@ -20,4 +26,10 @@ ngb-carousel {
   &:active:focus {
     box-shadow: 0 0 0 0.2rem rgba(96, 173, 94, 0.5) !important;
   }
+}
+
+.homepage-main-image-container {
+  height: 450px;
+  background-size: cover;
+  background: url("http://placeimg.com/2200/600/any") center top;
 }
