--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,19 @@
 * {
   font-family: 'Roboto', sans-serif;
 }
+
+.loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    background-color: rgba(0, 0, 0, 0.6);
+    &-content {
+        font-size: 50px;
+        color: white;
+    }
+}
+
+body {
+    background-image: url("assets/stripes-light.png");
+}
